# blitztext

./: .gitignore  Cargo.toml  LICENSE  README.md  blitztext.pyi  pyproject.toml
benches/: benchmark.py  benchmark.rs  benchmark_full.py  benchmark_results.md
examples/: basic_usage.py  basic_usage.rs
src/: char_set.rs  keyword_processor.rs  lib.rs  trie.rs  utils.rs
tests/: integration_test.rs
