[package]
name = "blitztext"
version = "0.1.0"
edition = "2021"
authors = ["Praise Oketola <oketola.praise@gmail.com>"]
description = "A library for fast keyword extraction and replacement in strings."
license = "MIT"
repository = "https://github.com/praise2112/blitztext"
keywords = ["keyword", "search", "fuzzy", "trie", "aho-corasick"]
categories = ["text-processing", "algorithms"]

[lib]
name = "blitztext"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.9.0-alpha.2"
regex = "1.10.6"
rayon = "1.10.0"
pyo3 = { version = "0.22.2", features = ["extension-module"] }
rustc-hash = "2.0.0"
bincode = "1.3.3"
serde = { version = "1.0.206", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true